welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:38: error: not found: value stop
    stop()
    ^